# onsm

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  model.rs  scoring.rs  summary.rs  util.rs
src/io/: bam.rs  fasta.rs  mod.rs  paf.rs  runfiles.rs
src/subcommands/: classify.rs  dump.rs  mod.rs  prep.rs  reuse.rs  syscheck.rs
src/util/: logging.rs  mapping.rs
