[package]
name = "onsm"
version = "0.1.0"
edition = "2021"
authors = ["Max Carter-Brown <max.carter-brown@aru.ac.uk>"]
license = "MIT"
description = "Organelle–Nuclear Similarity Mapper (NUMT vs NIMT, long-read only)"
repository = "https://github.com/euphrasiologist/onsm"
readme = "README.md"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.13"
ahash = "0.8"
regex = "1.10"
humantime = "2.1"
indicatif = "0.17"
tempfile = "3.10"
fs-err = "2.11"
sysinfo = { version = "0.30", default-features = false, features = ["multithread"] }
which = "6.0"
md5 = "0.7"
paf = "0.2.1"
log = "0.4"
env_logger = "0.11"

# gzip/fastq parsing (reads are long-read only)
needletail = "0.5"

# BAM/CRAM support 
noodles-bam  = "0.83"
noodles-sam  = "0.79"
noodles-core = "0.18"
noodles-bgzf = "0.43"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

