[package]
name = "onsm"
version = "0.1.1"
edition = "2021"
authors = ["Max Carter-Brown <max.carter-brown@aru.ac.uk>"]
license = "MIT"
description = "Organelle–Nuclear Similarity Mapper (NUMT vs NIMT, long-read only)"
repository = "https://github.com/euphrasiologist/onsm"
readme = "README.md"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10"
fs-err = "2.11"
which = "6.0"
paf = "0.2.1"
log = "0.4"
env_logger = "0.11"
needletail = "0.6.3"
serde_json = "1.0.145"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

